--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/">Sign Up</a> | <a routerLink="sign-in">sign In</a>
+<a routerLink="/">Sign Up</a> | <a routerLink="sign-in">sign In</a> | <button (click)="getData()">Get Data</button>
 <div class="container" style="margin-top: 150px; margin-bottom: 150px;">
   <router-outlet></router-outlet>
 </div>
