--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,24 @@
-<a routerLink="/">Sign Up</a> | <a routerLink="sign-in">sign In</a> | <button (click)="getData()">Get Data</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <ng-template [ngIf]="!_authService.isAuthenticated()">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="sign-in">Sign In</a>
+        </li>
+      </ng-template>
+      <li class="nav-item" *ngIf="_authService.isAuthenticated()">
+        <span class="nav-link" (click)="getData()">Get Data</span>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container" style="margin-top: 150px; margin-bottom: 150px;">
   <router-outlet></router-outlet>
 </div>
