--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,15 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="about">About</a>
+      </li>
       <ng-template [ngIf]="!_authService.isAuthenticated()">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Sign Up</a>
+          <a class="nav-link" routerLink="sign-up">Sign Up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="sign-in">Sign In</a>
