--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,43 @@
-<p>home works!</p>
+<h1>Welcome {{email}}</h1>
+<div class="table-responsive">
+    <table class="table table-striped table-sm">
+        <tbody>
+            <tr *ngIf="displayName">
+                <th>Name:</th>
+                <td>{{displayName}}</td>
+            </tr>
+            <tr>
+                <th>Email:</th>
+                <td>{{email}}</td>
+            </tr>
+            <tr>
+                <th>Email Verified:</th>
+                <td>{{emailVerified}}</td>
+            </tr>
+            <tr>
+                <th>Phone No:</th>
+                <td>{{phoneNumber}}</td>
+            </tr>
+            <tr>
+                <th>Creation Time:</th>
+                <td>{{creationTime}}</td>
+            </tr>
+            <tr>
+                <th>Last Log In:</th>
+                <td>{{lastSignInTime}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="row">
+    <div *ngFor="let address of addressItems; let i=index" class="col-sm-4 mb-4">
+        <div class="p-2 border">
+            <h3>{{address.name}}</h3>
+            <p>{{address.address1}}<br>
+                {{address.address2}}<br>
+                {{address.city | uppercase}}, {{address.state | uppercase}} {{address.pincode}}<br>
+                India</p>
+        </div>
+    </div>
+</div>
+<button mat-raised-button color="primary" (click)="editProfile()">Edit Profile</button>
